tests/analyzer/errors/non_comptime_global.rv
// Global
fn trash() -> int { 5 }

var a = trash()

// Function default
fn getValue() -> int { 5 }
fn func(a = getValue()) {}

// Structure default
struct Person {
    age: int = getValue(),
}

fn main() { }
